--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "~1.6.1",
     "ng2-dragula": "^1.3.1",
+    "ngx-bootstrap": "^1.6.6",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.2.0",
     "serve-favicon": "~2.3.0",
