--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.2.0",
     "serve-favicon": "~2.3.0",
+    "shuffle-array": "^1.0.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
