--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "del-cli": "^0.2.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.4",
+    "image-webpack-loader": "^3.3.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "^2.0.3",
     "typescript": "^2.1.4",
