--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@angular/flex-layout": "^2.0.0-beta.7",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
-    "@angular/material": "2.0.0-beta.6",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/platform-server": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@angular/upgrade": "^4.0.0",
     "@types/lodash": "^4.14.68",
+    "@types/paper": "^0.9.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
@@ -38,6 +39,7 @@
     "mongoose-unique-validator": "^1.0.5",
     "morgan": "~1.6.1",
     "nodemailer": "^4.0.1",
+    "paper": "^0.11.4",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.4.2",
     "serve-favicon": "~2.3.0",
